# ssl-proxy

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml  ops-memory.md  vector.toml
apps/integration-console/: .gitignore  Dockerfile  Gemfile  README.md
apps/integration-console/app/channels/: alert_channel.rb  live_audit_channel.rb  sensor_health_channel.rb
apps/integration-console/app/controllers/: alerts_controller.rb  application_controller.rb  audit_logs_controller.rb  audit_windows_controller.rb  authorized_wireless_networks_controller.rb  backlog_controller.rb  dashboard_controller.rb  heatmap_controller.rb  identities_controller.rb  shadow_it_alerts_controller.rb
apps/integration-console/app/helpers/: application_helper.rb  nav_helper.rb
apps/integration-console/app/models/: audit_log.rb  audit_window.rb  authorized_wireless_network.rb  backlog_status.rb  nats_traffic_sample.rb  sensor.rb  sensor_alert.rb  shadow_it_alert.rb  sync_record.rb  wireless_audit_hourly_summary.rb  wireless_audit_identity.rb  wireless_device_inventory.rb
apps/integration-console/app/services/: audit_window_publisher.rb  backlog_retry_service.rb  sensor_heartbeat_monitor.rb
apps/integration-console/config/: application.rb  cable.yml  database.yml  importmap.rb  puma.rb  routes.rb  tailwind.config.js
apps/integration-console/config/environments/: development.rb  production.rb  test.rb
apps/integration-console/config/initializers/: assets.rb  filter_parameter_logging.rb
apps/integration-console/config/locales/: en.yml
apps/integration-console/db/: schema.rb
apps/integration-console/test/: test_helper.rb
apps/ssl-proxy-dashboard/: .env.example  README.md  package.json  tsconfig.json  vite.config.ts
apps/ssl-proxy-dashboard/src/: app.css  app.d.ts
config/client/: wg-obfs-shim.env.example  wg-obfs-shim.service
config/peer1/: peer1-obfuscated.conf.example  peer1.conf
config/server/: privatekey-server
config/templates/: peer.conf  server.conf
docker/: entrypoint.sh
docker/nats/: bootstrap.sh
docs/: architecture.md  proxy-zig-rust-cutover.md  runbook.md  ssl-proxy-compliance-audit-enhancement-workmap.md  threat-model.md
docs/adr/: 0001-oracle-sink-v1.md  0002-packet-ownership-deferred.md
scripts/: apply-identities.sh  deploy-and-verify.sh  diagnose.sh  memo-log.sh  memo-show.sh  prep_ath.sh  sync-status.sh  up-ready.sh
secrets/: proxy_password.txt
services/atheros-sensor/: Cargo.toml  README.md  atheros-sensor.service
services/atheros-sensor/src/: audit.rs  backlog.rs  capture.rs  config.rs  config_subscriber.rs  device.rs  error.rs  main.rs  model.rs  parse.rs  publish.rs  stats.rs  testutil.rs
services/atheros-sensor/src/audit/: bandwidth.rs  layer.rs  mod.rs  window.rs
services/atheros-sensor/src/backlog/: mod.rs  pool_diag.rs  postgres.rs  store.rs  wireless_columns.rs
services/atheros-sensor/src/parse/: addresses.rs  channel.rs  correlation.rs  decap.rs  eapol.rs  frame.rs  handshake.rs  identity.rs  ie.rs  mod.rs  qos.rs  radiotap.rs  tags.rs
services/oracle-worker/: Cargo.toml  Dockerfile
services/oracle-worker/src/: main.rs  worker.rs
services/zig-coordinator/: Dockerfile  build.zig  build.zig.zon
services/zig-coordinator/schema/: new.json  postgres.sql
services/zig-coordinator/src/: command.zig  config.zig  db.zig  jobs.zig  logging.zig  main.zig  nats.zig  scheduler.zig  state.zig
sql/: V002__payload_audit.sql  V003__reporting_views.sql  V004__retention_and_mvs.sql  V006__connection_sessions_reason.sql  V007__devices_and_identity.sql  V008__bandwidth_and_rollups.sql  V009__proxy_bulk.sql  V010__hardening_follow_up.sql  V011__constraint_consistency_validation.sql  V012__constraint_consistency_validation_ddl.sql  V013__oracle_partitioning_and_mvs.sql  clickhouse.sql  nuclear_drop.sql  schema.sql  verify_drop.sql  views.sql
src/: blocklist.rs  boringtun_control.rs  config.rs  dashboard.rs  events.rs  forensic.rs  identity.rs  lib.rs  main.rs  obfuscation.rs  proxy.rs  quic.rs  security.rs  state.rs  sync.rs  transport.rs  wg_packet_obfuscation.rs  wg_relay.rs  wg_shim.rs  wg_stats.rs
src/tunnel/: classify.rs  connect.rs  dial.rs  mod.rs  tarpit.rs  tls.rs  transparent.rs
static/: index.html
tests/: blocklist_refresh.rs  obfuscation_e2e.rs  smoke.sh  wireguard_template.rs
(+112 files in other folders)
