[workspace]
members = ["."]
exclude = ["services/oracle-worker"]

[package]
name = "ssl-proxy"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
hyper-proxy = "0.9.1"
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["set-header", "fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "tokio-runtime", "webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
nix = { version = "0.29", features = ["net"] }
libc = "0.2"
dashmap = "6"
socket2 = { version = "0.5", features = ["all"] }
subtle = "2"
thiserror = "1.0"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
bytes = "1"
base64 = "0.22"
arc-swap = "1.7"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["quic"]
quic = ["dep:quinn", "dep:h3", "dep:h3-quinn"]

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4

[profile.bench]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.

[dev-dependencies]
tempfile = "3"
