[package]
name = "atheros-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
deadpool-postgres = "0.14"
futures = "0.3"
ieee80211 = "=0.5.6"
pcap = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
lru = "0.12"
ssl-proxy = { path = "../..", default-features = false }
thiserror = "1.0"
tokio = { version = "1.40", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3"
