[package]
name = "oracle-worker"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
async-nats = "0.40"
chrono = { version = "0.4", default-features = true }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
